--- a/exp0/Predict.ipynb
+++ b/exp0/Predict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,10 +25,10 @@
       "Recall 1.0\n",
       "F1 1.0\n",
       "---------------------------------------\n",
-      "Accuracy 0.9445061043285239\n",
-      "Precision 0.8242811501597445\n",
-      "Recall 0.8514851485148515\n",
-      "F1 0.8376623376623376\n"
+      "Accuracy 0.9472807991120976\n",
+      "Precision 0.8270440251572327\n",
+      "Recall 0.8679867986798679\n",
+      "F1 0.8470209339774556\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,17 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy 0.9484902309058615\n",
-      "Precision 0.8397932816537468\n",
-      "Recall 0.8575197889182058\n",
-      "F1 0.8485639686684073\n"
+      "Accuracy 0.94449378330373\n",
+      "Precision 0.8190954773869347\n",
+      "Recall 0.8601583113456465\n",
+      "F1 0.8391248391248392\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
