--- a/exp1/exp1_Predict.ipynb
+++ b/exp1/exp1_Predict.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Datapipeline import Datapipeline\n",
+    "from exp1_Datapipeline import Datapipeline\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
