--- a/exp1/exp1_Predict.ipynb
+++ b/exp1/exp1_Predict.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,8 +59,10 @@
        "                 ColumnTransformer(transformers=[(&#x27;num&#x27;,\n",
        "                                                  Pipeline(steps=[(&#x27;imputer&#x27;,\n",
        "                                                                   SimpleImputer(strategy=&#x27;most_frequent&#x27;)),\n",
+       "                                                                  (&#x27;outlier_handling&#x27;,\n",
+       "                                                                   OutlierHandling()),\n",
        "                                                                  (&#x27;scale&#x27;,\n",
-       "                                                                   StandardScaler())]),\n",
+       "                                                                   MinMaxScaler())]),\n",
        "                                                  [&#x27;Tenure&#x27;, &#x27;CC_Contacted_LY&#x27;,\n",
        "                                                   &#x27;Service_Score&#x27;,\n",
        "                                                   &#x27;Account_user_count&#x27;,\n",
@@ -75,7 +77,7 @@
        "                                                  Pipeline(steps=[(&#x27;imputer&#x27;,\n",
        "                                                                   SimpleImputer(strategy=&#x27;most_frequent&#x27;)),\n",
        "                                                                  (&#x27;onehot&#x27;,\n",
-       "                                                                   OneHotEncoder())]),\n",
+       "                                                                   OneHotEncoder(sparse=False))]),\n",
        "                                                  [&#x27;Payment&#x27;, &#x27;City_Tier&#x27;,\n",
        "                                                   &#x27;Gender&#x27;, &#x27;account_segment&#x27;,\n",
        "                                                   &#x27;Marital_Status&#x27;,\n",
@@ -84,8 +86,10 @@
        "                 ColumnTransformer(transformers=[(&#x27;num&#x27;,\n",
        "                                                  Pipeline(steps=[(&#x27;imputer&#x27;,\n",
        "                                                                   SimpleImputer(strategy=&#x27;most_frequent&#x27;)),\n",
+       "                                                                  (&#x27;outlier_handling&#x27;,\n",
+       "                                                                   OutlierHandling()),\n",
        "                                                                  (&#x27;scale&#x27;,\n",
-       "                                                                   StandardScaler())]),\n",
+       "                                                                   MinMaxScaler())]),\n",
        "                                                  [&#x27;Tenure&#x27;, &#x27;CC_Contacted_LY&#x27;,\n",
        "                                                   &#x27;Service_Score&#x27;,\n",
        "                                                   &#x27;Account_user_count&#x27;,\n",
@@ -100,7 +104,7 @@
        "                                                  Pipeline(steps=[(&#x27;imputer&#x27;,\n",
        "                                                                   SimpleImputer(strategy=&#x27;most_frequent&#x27;)),\n",
        "                                                                  (&#x27;onehot&#x27;,\n",
-       "                                                                   OneHotEncoder())]),\n",
+       "                                                                   OneHotEncoder(sparse=False))]),\n",
        "                                                  [&#x27;Payment&#x27;, &#x27;City_Tier&#x27;,\n",
        "                                                   &#x27;Gender&#x27;, &#x27;account_segment&#x27;,\n",
        "                                                   &#x27;Marital_Status&#x27;,\n",
@@ -108,7 +112,9 @@
        "                [&#x27;classifier&#x27;, RandomForestClassifier(random_state=42)]])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">preprocessor: ColumnTransformer</label><div class=\"sk-toggleable__content\"><pre>ColumnTransformer(transformers=[(&#x27;num&#x27;,\n",
        "                                 Pipeline(steps=[(&#x27;imputer&#x27;,\n",
        "                                                  SimpleImputer(strategy=&#x27;most_frequent&#x27;)),\n",
-       "                                                 (&#x27;scale&#x27;, StandardScaler())]),\n",
+       "                                                 (&#x27;outlier_handling&#x27;,\n",
+       "                                                  OutlierHandling()),\n",
+       "                                                 (&#x27;scale&#x27;, MinMaxScaler())]),\n",
        "                                 [&#x27;Tenure&#x27;, &#x27;CC_Contacted_LY&#x27;, &#x27;Service_Score&#x27;,\n",
        "                                  &#x27;Account_user_count&#x27;, &#x27;CC_Agent_Score&#x27;,\n",
        "                                  &#x27;rev_per_month&#x27;, &#x27;Complain_ly&#x27;,\n",
@@ -117,18 +123,21 @@
        "                                (&#x27;cat&#x27;,\n",
        "                                 Pipeline(steps=[(&#x27;imputer&#x27;,\n",
        "                                                  SimpleImputer(strategy=&#x27;most_frequent&#x27;)),\n",
-       "                                                 (&#x27;onehot&#x27;, OneHotEncoder())]),\n",
+       "                                                 (&#x27;onehot&#x27;,\n",
+       "                                                  OneHotEncoder(sparse=False))]),\n",
        "                                 [&#x27;Payment&#x27;, &#x27;City_Tier&#x27;, &#x27;Gender&#x27;,\n",
        "                                  &#x27;account_segment&#x27;, &#x27;Marital_Status&#x27;,\n",
-       "                                  &#x27;Login_device&#x27;])])</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">num</label><div class=\"sk-toggleable__content\"><pre>[&#x27;Tenure&#x27;, &#x27;CC_Contacted_LY&#x27;, &#x27;Service_Score&#x27;, &#x27;Account_user_count&#x27;, &#x27;CC_Agent_Score&#x27;, &#x27;rev_per_month&#x27;, &#x27;Complain_ly&#x27;, &#x27;rev_growth_yoy&#x27;, &#x27;coupon_used_for_payment&#x27;, &#x27;Day_Since_CC_connect&#x27;, &#x27;cashback&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">SimpleImputer</label><div class=\"sk-toggleable__content\"><pre>SimpleImputer(strategy=&#x27;most_frequent&#x27;)</pre></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" ><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">StandardScaler</label><div class=\"sk-toggleable__content\"><pre>StandardScaler()</pre></div></div></div></div></div></div></div></div><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" ><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">cat</label><div class=\"sk-toggleable__content\"><pre>[&#x27;Payment&#x27;, &#x27;City_Tier&#x27;, &#x27;Gender&#x27;, &#x27;account_segment&#x27;, &#x27;Marital_Status&#x27;, &#x27;Login_device&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-7\" type=\"checkbox\" ><label for=\"sk-estimator-id-7\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">SimpleImputer</label><div class=\"sk-toggleable__content\"><pre>SimpleImputer(strategy=&#x27;most_frequent&#x27;)</pre></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-8\" type=\"checkbox\" ><label for=\"sk-estimator-id-8\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">OneHotEncoder</label><div class=\"sk-toggleable__content\"><pre>OneHotEncoder()</pre></div></div></div></div></div></div></div></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-9\" type=\"checkbox\" ><label for=\"sk-estimator-id-9\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(random_state=42)</pre></div></div></div></div></div></div></div>"
+       "                                  &#x27;Login_device&#x27;])])</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">num</label><div class=\"sk-toggleable__content\"><pre>[&#x27;Tenure&#x27;, &#x27;CC_Contacted_LY&#x27;, &#x27;Service_Score&#x27;, &#x27;Account_user_count&#x27;, &#x27;CC_Agent_Score&#x27;, &#x27;rev_per_month&#x27;, &#x27;Complain_ly&#x27;, &#x27;rev_growth_yoy&#x27;, &#x27;coupon_used_for_payment&#x27;, &#x27;Day_Since_CC_connect&#x27;, &#x27;cashback&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" ><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">SimpleImputer</label><div class=\"sk-toggleable__content\"><pre>SimpleImputer(strategy=&#x27;most_frequent&#x27;)</pre></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" ><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">OutlierHandling</label><div class=\"sk-toggleable__content\"><pre>OutlierHandling()</pre></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" ><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MinMaxScaler</label><div class=\"sk-toggleable__content\"><pre>MinMaxScaler()</pre></div></div></div></div></div></div></div></div><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-7\" type=\"checkbox\" ><label for=\"sk-estimator-id-7\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">cat</label><div class=\"sk-toggleable__content\"><pre>[&#x27;Payment&#x27;, &#x27;City_Tier&#x27;, &#x27;Gender&#x27;, &#x27;account_segment&#x27;, &#x27;Marital_Status&#x27;, &#x27;Login_device&#x27;]</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-8\" type=\"checkbox\" ><label for=\"sk-estimator-id-8\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">SimpleImputer</label><div class=\"sk-toggleable__content\"><pre>SimpleImputer(strategy=&#x27;most_frequent&#x27;)</pre></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-9\" type=\"checkbox\" ><label for=\"sk-estimator-id-9\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">OneHotEncoder</label><div class=\"sk-toggleable__content\"><pre>OneHotEncoder(sparse=False)</pre></div></div></div></div></div></div></div></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-10\" type=\"checkbox\" ><label for=\"sk-estimator-id-10\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(random_state=42)</pre></div></div></div></div></div></div></div>"
       ],
       "text/plain": [
        "Pipeline(steps=[('preprocessor',\n",
        "                 ColumnTransformer(transformers=[('num',\n",
        "                                                  Pipeline(steps=[('imputer',\n",
        "                                                                   SimpleImputer(strategy='most_frequent')),\n",
+       "                                                                  ('outlier_handling',\n",
+       "                                                                   OutlierHandling()),\n",
        "                                                                  ('scale',\n",
-       "                                                                   StandardScaler())]),\n",
+       "                                                                   MinMaxScaler())]),\n",
        "                                                  ['Tenure', 'CC_Contacted_LY',\n",
        "                                                   'Service_Score',\n",
        "                                                   'Account_user_count',\n",
@@ -143,7 +152,7 @@
        "                                                  Pipeline(steps=[('imputer',\n",
        "                                                                   SimpleImputer(strategy='most_frequent')),\n",
        "                                                                  ('onehot',\n",
-       "                                                                   OneHotEncoder())]),\n",
+       "                                                                   OneHotEncoder(sparse=False))]),\n",
        "                                                  ['Payment', 'City_Tier',\n",
        "                                                   'Gender', 'account_segment',\n",
        "                                                   'Marital_Status',\n",
@@ -169,7 +178,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tAcc: 0.98\tPre: 0.98\tRecall: 0.89\tF1: 0.93\n"
+      "\tAcc: 0.98\tPre: 0.99\tRecall: 0.90\tF1: 0.94\n"
      ]
     }
    ],
@@ -195,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
